anna (0.049) UNRELEASED; urgency=low

  * Nikolai Prokoschenko
    - Updated russian translation
  * Ming Hua
    - Updated Simplified Chinese translation (zh_CN.po)
  * Bastian Blank
    - Enable support for Subarchitecure.
    - Depend against archdetect.
    - Build-Depend against libdebian-installer4-dev (>= 0.18).

 -- Bastian Blank <waldi@debian.org>  Sat, 17 Jan 2004 15:44:50 +0100

anna (0.048) unstable; urgency=low

  * Ming Hua
    - Initial Simplified Chinese translation (zh_CN.po)
  * Bart Cornelis
    - Merged Norwegian Nynorsk (nn.po) translation from skolelinux-cvs
  * Thiemo Seufer
    - Fix memory leaks.
  * Teófilo Ruiz Suárez
    - Fixed some inconsistencies in Spanish Translation (es.po)
  * Andre Dahlqvist
   - Update Swedish translation (sv.po)
  * Anmar Oueja
   - created and translated to Arabic (ar.po)

 -- Petter Reinholdtsen <pere@debian.org>  Wed, 31 Dec 2003 13:58:46 +0100

anna (0.047) unstable; urgency=low

  * Bart Cornelis 
    - Merged Norwegian Bokmael (nb.po) translation from skolelinux-cvs
  * Peter Mann
    - Updated Slovak translations

 -- Joey Hess <joeyh@debian.org>  Thu, 25 Dec 2003 19:23:15 -0500

anna (0.046) unstable; urgency=low

  * Bartosz Fenski
    - Update Polish (pl) translation.
  * Verok Istvan
    - Initial translation to Hungarian
  * Bart Cornelis
    - Updated Dutch translation (nl.po)
  * Giuseppe Sacco
    - Updated italian translation
    - switched to utf-8
  * Teófilo Ruiz Suárez
    - Updated Spanish translation
    - Switched to UTF-8
  * André Dahlqvist
    - Update Swedish translation. (sv.po)
  * David Martínez Moreno
    - Updated Spanish translation
  * Dennis Stampfer
    - Update German translation (de.po)
  * Konstantinos Margaritis
    - Updated Greek translation (el.po). Thanks must go to
      Lefteris Dimitroulakis and Panagiotis Kanavos.
  * Peter Mann
    - Updated Slovak translation (sk.po).
  * Miguel Figueiredo
    - New portuguese translation. (pt.po)
  * Ognyan Kulev